# FirstPR

./: .gitignore  CONTRIBUTOR_ONBOARDING_GUIDE.md  DEPLOYMENT.md  DEVPOST.md  DOCKER.md  Dockerfile  FINAL_REPORT.md  PERFORMANCE.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_QUICKREF.md  PERFORMANCE_SUMMARY.md  Procfile  README.md  USAGE_EXAMPLE.md  docker-compose.yml  nixpacks.toml  railway.json  railway.toml  run_project.ps1  start.ps1
backend/: .env.example  .env.test  .pdm-python  Dockerfile  README.md  firstpr-cli.py  list_models.py  pyproject.toml  requirements-clean.txt  requirements-simple.txt  requirements.txt  run.py  start.sh  verify_chat.py  verify_gemini3.py  verify_llm.py  verify_new_sdk.py
backend/src/: main.py  verify_gemini3.py  verify_social_plantuml.py
backend/src/api/: routes.py
backend/src/core/: concurrency.py  config.py  models.py  network.py
backend/src/services/: activity_analyzer.py  analyzer.py  chat_service.py  chunking.py  github.py  issue_pr_intelligence.py  llm.py  prompt_composer.py  rules_detector.py
backend/tests/: bench_perf.py  test_chunking.py  test_github_client.py
frontend/: .eslintrc.json  Dockerfile  README.md  analyze-bundle.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/analyze/: route.ts
frontend/src/app/api/stream/[jobId]/: route.ts
frontend/src/components/: ActivityPanel.tsx  ChatWidget.tsx  ComprehensiveOverview.tsx  Dashboard.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FileViewer.tsx  IssueItem.tsx  LoadingOverlay.tsx  ProjectOverview.tsx  PullRequestItem.tsx  RepoInput.tsx  Section.tsx
frontend/src/components/chat/: ChatCanvas.tsx  MessageBubble.tsx  StreamingText.test.tsx  StreamingText.tsx
frontend/src/components/context-rail/: ContextRail.tsx  FileViewer.tsx
frontend/src/components/modals/: PRPreviewModal.tsx
frontend/src/lib/: types.ts
frontend/src/types/: index.ts
frontend_legacy/: package-lock.json  package.json
frontend_legacy/src/: App.tsx  index.css
frontend_legacy/src/api/: client.ts
frontend_legacy/src/components/: Dashboard.tsx  LoadingOverlay.tsx  RepoInput.tsx
